# tools_telemetry

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-testlogs  bazel-tools_telemetry  extension.bzl  sha1.bzl  tests.bzl  xorshift.bzl
.aspect/workflows/: config.yaml
.bcr/: metadata.template.json
.github/workflows/: ci-workflows.yaml  publish.yaml  release.yaml
collectors/: bazel.bzl  fingerprinting.bzl
docs/: env.md
examples/missing_lockfile/: BUILD.bazel  test.sh
examples/notice_once/: BUILD.bazel  MODULE.bazel  test.sh
examples/simple/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-simple  bazel-testlogs
test/: BUILD.bazel  flag_tests.bzl
