# Note that different configurations can be tested by setting `--repo_env` here

load("@bazel_skylib//rules:build_test.bzl", "build_test")

genrule(
    name = "report",
    outs = ["report.json"],
    srcs = ["@aspect_tools_telemetry_report//:report.json"],
    cmd = "cp $(location @aspect_tools_telemetry_report//:report.json) $@"
)

build_test(
    name = "report_builds",
    targets = [":report"],
)
